build an id cluster

--- a/cluster_config.cfg
+++ b/cluster_config.cfg
@@ -6,4 +6,4 @@ vars = vars.yml
 names_file = names.yml
 hot_file = id_HOT.yml
 playbook = topplay.yml
-reqpasswd = '{"slurmdb_passwd": 8, "mungekey": 32, "sqlrootPasswd": 8, "ldapManagerPassword": 16, "ldapBindDNPassword": 8, "karaageSqlPassword": 8}'
+reqpasswd = {"slurmdb_passwd": 8, "mungekey": 32, "sqlrootPasswd": 8, "ldapManagerPassword": 16, "ldapBindDNPassword": 8, "karaageSqlPassword": 8}
